--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,11 +1,36 @@
 .Footer {
+    display: flex;
+
     background-color: #000000;
     color: #fff;
     text-align: center;
-    padding: 24px;
+    padding: 40px;
     bottom: 0;
 
     font-family: "Quicksand", sans-serif;
     font-weight: 500;
     font-size: 1rem;
+}
+
+.FooterPhrase {
+    width: 55%;
+}
+
+.FooterPhrase h1 {
+    font-size: 5rem;
+    margin: 4px;
+    padding: 16px;
+}
+
+.FooterPhrase h3 {
+    font-size: 1.6rem;
+    margin: 0;
+    padding: 24px;
+}
+
+.FooterContact {
+    width: 45%;
+    text-align: left;
+    margin: 0;
+    padding: 40px 80px;
 }
