--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -29,3 +29,49 @@
     height: 80px;
     width: auto;
 }
+
+.Search {
+    display: flex;
+    align-items: center;
+}
+  
+.SearchInput {
+    font-family: "Quicksand", sans-serif;
+    padding: 0.6rem;
+    border: none;
+    border-radius: 24px;
+    font-size: 1rem;
+}
+  
+.SearchButton {
+    padding: 0.8rem 1rem;
+    border: none;
+    background-color: #ff2a87;
+    color: white;
+    border-radius: 24px;
+    font-size: 1rem;
+    z-index: 3;
+
+    position: absolute;
+    transform: translateX(160%);
+    z-index: 2;
+    
+    cursor: pointer;
+}
+  
+.CartButton {
+    background: none;
+    border: none;
+    font-size: 3rem;
+
+    color: #fff;
+    display: flex;
+    align-items: center;
+
+    cursor: pointer;
+}
+  
+.CartButton:hover {
+    color: #ffee00;
+}
+  
