--- a/src/components/ProductsCard/ProductsCard.module.css
+++ b/src/components/ProductsCard/ProductsCard.module.css
@@ -39,6 +39,22 @@
     transition: transform 0.5s ease-in-out;
 }
 
+.ProductsCard_showmore {
+  background: none;
+    border: none;
+    cursor: pointer;
+
+    font-family: "Quicksand", sans-serif;
+    font-weight: 500;
+    font-size: 1.1rem;
+
+    padding-top: 24px;
+}
+
+.ProductsCard_button:active {
+  scale: 0.8;
+}
+
 .ProductsCard_button:hover {
     transform: scale(1.1);
     transition: transform 0.5s ease-in-out;
@@ -59,4 +75,41 @@
 .ProductsCard_img {
     height: 320px;
     width: auto;
+}
+
+.ModalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.ModalContent {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 24px;
+  max-width: 600px;
+  width: 100%;
+  text-align: center;
+}
+
+.ModalCloseButton {
+  margin-top: 24px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 8px;
+  font-size: 1rem;
+}
+
+.ModalCloseButton:hover {
+  background-color: #00cab9;
 }
