--- a/src/containers/CartPage/CartPage.module.css
+++ b/src/containers/CartPage/CartPage.module.css
@@ -1,29 +1,126 @@
-.Cart {
-    background: linear-gradient(to bottom, #00cab9, #ff2a87);
-    height: auto;
+.CartPage {
+    display: flex;
+    flex-direction: column;
+    background-color: #00cab9;
+    align-items: center;
     margin: 0;
-    padding: 40px 80px;
+    padding: 20px;
 }
 
-.Cart h1 {
+.CartPage h1 {
     color: #fff;
     font-family: "Rubik Puddles", system-ui;
     font-weight: 400;
-    font-size: 6rem;
+    font-size: 7rem;
 }
 
-.CartProducts {
+.CartPage_list {
     display: flex;
     flex-direction: column;
-    background: linear-gradient(to bottom, #ff2a87, #ffee00 40%);
-    height: auto;
-    padding: 104px 40px;
-    gap: 40px;
+    align-items: center;
+    background: linear-gradient(to bottom, #00cab9, #ff2a87);
+    margin: 0;
+    padding: 16px;
+
+    font-family: "Quicksand", sans-serif;
 }
 
-.CartProductsList {
+.CartPage_emptycart {
+    color: #fff;
+    font-size: 5rem;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 800;
+}
+
+.CartPage_item {
+    max-width: 888px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
+
     gap: 24px;
+    padding: 40px;
+    border-bottom: 4px solid #000;
+    background-color: #fff;
+}
+
+.CartPage_img {
+    height: 320px;
+    width: auto;
+}
+
+.CartPage_promoCode {
+    height: 40px;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    background-color: #ff2a87;
+    align-items: center;
+    padding: 40px;
+}
+
+.CartPage_promoCode input {
+    padding: 16px 24px;
+    border-radius: 40px 0 0 40px;
+    border: none;
+
+    box-shadow: 0 0 24px #780451;
+    font-size: 1.1rem;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 500;
+}
+
+.CartPage_promoCode button {
+    padding: 16px 24px;
+    border-radius: 0 40px 40px 0;
+    border: none;
+    background-color: #ffee00;
+    color: #000;
+
+    font-size: 1.1rem;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 800;
+
+    cursor: pointer;
+}
+
+.CartPage_promoCode button:hover {
+    color: #fff;
+    background-color: #8f8500;
+}
+
+.CartPage_total {
+    height: 80px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: #ff2a87;
+    align-items: center;
+    padding-bottom: 80px;
+
+    color: #fff;
+    font-size: 3rem;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 800;
+}
+
+.CartPage_buttonquantity {
+    background-color: #000;
+    color: #fff;
+    font-size: 1rem;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 600;
+    border-radius: 80px;
+    width: 96px;
+    margin-bottom: 4px;
+    border: none;
+
+    cursor: pointer;
+
+    transition: transform 0.5s ease-in-out;
+}
+
+.CartPage_buttonquantity:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s ease-in-out;
 }
